Fix: recommend service